@@ -1,6 +1,8 @@
 1797.	[func]		named-checkconf now check acls to verify that they
 			only refer to existing acls. [RT #13101]
 
+1796.	[func]		"rndc freeze/thaw" now freezes/thaws all zones.
+
 1794.	[func]		Named and named-checkzone can now both check for
 			non-terminal wildcard records.
 
